# SyncSpeak

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Start_SyncSpeak.bat  Test_Pipeline.bat  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: release.md  syncback.md
.github/workflows/: auto-syncback.yml  ci.yml  release.yml
docs/: api-reference.md  architecture.md  design-system.md  pipeline.md  setup.md
python/: sidecar_main.py  test_pipeline.py  translator.py
scripts/: sync-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json  updater_key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/renderer/: App.css  App.tsx  constants.ts  env.d.ts  index.html  main.tsx
src/renderer/components/: AnimatedBackground.tsx  LiquidTerminal.css  LiquidTerminal.tsx  TabBar.css  TabBar.tsx  TitleBar.css  TitleBar.tsx  UpdatePrompt.css  UpdatePrompt.tsx
src/renderer/hooks/: useLiquidGlass.ts  useSidecar.ts  useUpdater.ts
src/renderer/modals/: SettingsModal.css  SettingsModal.tsx
src/renderer/pages/: GuidePage.css  GuidePage.tsx  HistoryPage.css  (+5 more)
tests/: list_devices.py  test_api.py  test_installer_launch.py  test_playback.py  test_vm.py
website/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
website/public/: llms-full.txt  llms.txt  robots.txt
(+21 files in other folders)
