[package]
name = "syncspeak"
version = "3.0.2"
description = "Real-time Hindi to English voice translator for meetings"
authors = ["Soumyadip Giri"]
license = "MIT"
repository = "https://github.com/Soumyadipgithub/SyncSpeak"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
window-vibrancy = "0.6.0"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
